[package]
name = "bibeam-transport"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "`WireGuard` data plane built on the `boringtun` userspace state machine over a `tokio::net::UdpSocket`; coordinator-bound `rustls` HTTPS, STUN hole-punch, relay and SOCKS5 fallbacks, per-session rate limiter."

[dependencies]
bibeam-core = { workspace = true }
bibeam-protocol = { workspace = true }
bibeam-crypto = { workspace = true }
bibeam-runtime = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
boringtun = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
ipnet = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
fast-socks5 = { workspace = true }
governor = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
futures-util = { workspace = true }
metrics = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
time = { workspace = true }

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["bibeam-core", "bibeam-protocol", "bibeam-crypto", "bibeam-runtime", "tokio", "tokio-util", "boringtun", "rustls", "webpki-roots", "ipnet", "base64", "bytes", "fast-socks5", "futures-util", "governor", "metrics", "parking_lot", "postcard", "rand", "thiserror", "tracing"]
