[package]
name         = "xtask"
version      = "0.0.1"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = false
description  = "Workspace ops runner (CI, docs, release helpers)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap      = { workspace = true }
anyhow    = { workspace = true }
tracing   = { workspace = true }
tracing-subscriber = { workspace = true }
# xtask-only: workspace Cargo.toml parser for `gen-readmes`.
# Do NOT propagate to other crate manifests — only xtask needs it.
toml      = { workspace = true }

[lints]
workspace = true
